Bug 1629313 - Part 1 - Set As Desktop Background fails on macOS r=spohl

Change the nsMacShellService::SetDesktopBackground() implementation (specifically code in the OnStateChange handler) to use the Apple setDesktopImageURL API instead of Apple Events to allow the "Set As Desktop Background..." context menu option to work again.

Alternatively, to allow the AppleEvent-base implementation to work again, Firefox could be signed with the com.apple.security.automation.apple-events entitlement but this would also require the user to grant Firefox permission to control Finder. setDesktopImageURL requires Mac OS 10.6 or newer and hence was not an option originally.

The implementation only changes the background of the focused screen in the current workspace (which matches the behavior of Safari).

Differential Revision: https://phabricator.services.mozilla.com/D71426